bib file corrections, some more links to examples, some typos

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2866,11 +2866,11 @@ As listed below, these symbols and abbreviations are generally for the main clau
 \symboldef{CL}{Common Logic }
 \symboldef{CLIF}{Common Logic Interchange Format}
 \symboldef{CURIE}{Compact URI expression}
-\symboldef{DDL}{Distributed description logic}
+\symboldef{DDL}{Distributed description logic \cite{borgida6}}
 \symboldef{DOL}{Distributed Ontology, Modeling and Specification Language}
 \symboldef{DTV}{Date-Time Vocabulary}
 \symboldef{EBNF}{Extended Backus-Naur Form}
-\symboldef{E-connections}{a modular ontology language (closely related to DDL)}
+\symboldef{E-connections}{a modular ontology language (closely related to DDL) \cite{Kutzetal04}} 
 \symboldef{F-logic}{frame logic, an object-oriented ontology language}
 \symboldef{IRI}{Internationalized Resource Identifier}
 \symboldef{MOF}{Meta-Object Facility}
@@ -4494,7 +4494,8 @@ these alternatives, a subclass is introduced. An OMS can be
 \begin{itemize}
 \item a \syntax{TranslationOMS} involving both
 an OMS (to be translated), and a specification of the translation,
-which is covered by the class \syntax{OMSTranslation};
+which is covered by the class \syntax{OMSTranslation}; 
+(See Appendix~\ref{dist-het-onto}, \ref{ex:DDL}, for examples.)
 \item a \syntax{UnionsOMS}, uniting two given OMS; 
 (See Appendix~\ref{ex:engine} for an example.)
 \item a \syntax{ClosureOMS}, applying a closure operator
@@ -4520,11 +4521,12 @@ namely a basic OMS or an OMS reference (see below);
 (given by an \syntax{Reduction}) to an OMS;
 \item a \syntax{ExtractionOMS}, applying a module extraction operator
 (given by an \syntax{Extraction}) to an OMS;
+ (See use case \ref{onto-3} for an example.)
 \item a \syntax{QualifiedOMS}, which is an OMS qualified with the OMS
   language that is used to express it.
 \end{itemize}
 Moreover, annex~\ref{a:queries}
-informatively introduces \syntax{Application}s, which apply a substition
+informatively introduces \syntax{Application}s, which apply a substitution
 to an OMS.
 
 A \syntax{ConservativityStrength} specifies additional relations that
@@ -4541,8 +4543,8 @@ tautologies as signature-free logical consequences, while
 \syntax{'not\-consequence-conservative'} expresses that this is not
 the case.  \syntax{'model-conservative'} requires satisfiability of
 the OMS, \syntax{'not-model-conservative'} its unsatisfiability.
-\syntax{'de\-fi\-nitional'} expresses  that the OMS has a unique
-model; this may be interesting for characterizing OMS
+\syntax{'de\-fi\-nitional'} expresses that the OMS has a unique
+model (see Appendix~\ref{ex:definedconcepts} for an example); this may be interesting for characterizing OMS
 (e.g.\ returned by model finders) that are used to describe single
 models.
 
