--- a/Standard/dol.bib
+++ b/Standard/dol.bib
@@ -66,7 +66,7 @@
 
 @ARTICLE{circ1,
   AUTHOR = {J. McCarthy},
-  TITLE = {Circumscription --- A Form of Non-monotonic Reasoning},
+  TITLE = {{Circumscription: A Form of Non-monotonic Reasoning}},
   JOURNAL = {Artificial Intelligence},
   VOLUME = {13},
   YEAR = {1980},
@@ -89,13 +89,16 @@
   year = 2010,
 }
 
-@INPROCEEDINGS{KutzEtAl:ChineseWhispers2010,
-  AUTHOR = {Oliver Kutz and I. Normann and Till Mossakowski and D. Walther},
-  TITLE = {Chinese Whispers and Connected Alignments},
-  BOOKTITLE = {Proc.\ of the 5th Int. Workshop on Ontology Matching (OM 2010)},
-  YEAR = {2010},
-  NOTE = {\url{http://disi.unitn.it/~p2p/OM-2010/om2010_Tpaper3.pdf}},
-}
+
+@inproceedings{KutzEtAl:ChineseWhispers2010,
+	Address = {9th International Semantic Web Conference ISWC-2010, November 7, 2010, Shanghai, China.},
+	Author = {O. Kutz AND I. Normann AND T. Mossakowski AND D. Walther},
+	Booktitle = {Proc.\ of the 5th International Workshop on Ontology Matching (OM-2010)},
+	Date-Added = {2012-02-03 03:43:32 +0000},
+	Date-Modified = {2012-02-03 03:51:47 +0000},
+	Title = {{Chinese Whispers and Connected Alignments}},
+	Year = {2010}}
+
 
 @INPROCEEDINGS{CuencaGrauEtAl:ExtractingModulesOntologies2007,
   AUTHOR = {B. Cuenca Grau and I. Horrocks and Y. Kazakov and U. Sattler},
@@ -258,12 +261,19 @@ ZimmerEuze06,
   journal = {December 2011, submitted. \url{http://www.informatik.uni-bremen.de/~till/papers/hetonto.pdf}},
   year = 2011,
 }
-@article{OntoGraph,
-  author = {T. Mossakowski and Oliver Kutz},
-  title = {The Onto-Logical Translation Graph},
-  journal = {In: 5th International Workshop on Modular Ontologies (WoMO) at the 23rd European Summer School in Logic, Language and Information (ESSLLI) (Ljubljana, Slovenia, Aug. 8–12, 2011), Oliver Kutz, T. Schneider (eds.), IOS Press 2011.},
-  year = 2011,
-}
+
+@inproceedings{OntoGraph,
+	Author = {T. Mossakowski AND O. Kutz},
+	Booktitle = {Modular Ontologies---Proceedings of the Fifth International Workshop (WoMO 2011)},
+	Date-Added = {2011-06-02 00:36:23 +0200},
+	Date-Modified = {2011-09-08 22:16:29 +0000},
+	Pages = {94--109},
+	Publisher = {IOS Press},
+	Series = {Frontiers in Artificial Intelligence and Applications},
+	Title = {{The Onto-Logical Translation Graph}},
+	Volume = {230},
+	Year = {2011}}
+
 @article{ThreeSemantics,
   author = {T. Mossakowski and C. Lange and Oliver Kutz},
   title = {Three Semantics for the Core of the Distributed Ontology Language},
@@ -368,13 +378,13 @@ ZimmerEuze06,
   year = 2002,
 }
 @article{Artale07time,
-  author = {Alessandro Artale and Roman Kontchakov and Carsten Lutz and Frank Wolter and Michael Zakharyaschev},
+  author = {A. Artale and R. Kontchakov and C. Lutz and F. Wolter and M. Zakharyaschev},
   title = {Temporalising Tractable Description Logic},
-  journal = {Proc. of the 14th International Symposium on Temporal Representation and Reasoning (TIME-07), 2007},
+  journal = {Proc.\ of the 14th International Symposium on Temporal Representation and Reasoning (TIME-07), 2007},
   year = 2007,
 }
 @article{AGK08,
-  author = {Alessandro Artale and Nicola Guarino and C. Maria Keet},
+  author = {A. Artale and N. Guarino and C. M. Keet},
   title = {Formalising temporal constraints on part-whole relations},
   journal = {In: Gerhard Brewka and Jerome Lang, 11th International Conference on Principles of Knowledge Representation and Reasoning (KR'08), 673-683, AAAI Press 2008},
   year = 2008,
@@ -382,7 +392,7 @@ ZimmerEuze06,
 
 
 @InProceedings{KeetEtAl12,
-  author = 	 {Keet, C.M. and Fern\'andez-Reyes, F.C. and Morales-Gonz\'alez, A.},
+  author = 	 {Keet, C. M. and Fern\'andez-Reyes, F.C. and Morales-Gonz\'alez, A.},
   title = 	 {Representing mereotopological relations in OWL ontologies with OntoPartS},
   booktitle = {Proceedings of the 9th Extended Semantic Web Conference (ESWC'12), 29-31 May 2012, Heraklion, Crete, Greece},
   year = 	 {2012},
@@ -432,7 +442,7 @@ ZimmerEuze06,
 }
 
 @InProceedings{KhanKeet13,
-  author = 	 {Khan, Z. and Keet, C.M.},
+  author = 	 {Khan, Z. and Keet, C. M.},
   title = 	 {Addressing issues in foundational ontology mediation},
   OPTcrossref =  {},
   OPTkey = 	 {},
@@ -871,3 +881,118 @@ YEAR = 1990}
   pages = 	 {43--53},
 }
 
+
+@InProceedings{OM2014,
+  author = {Mihai Codescu and Till Mossakowski and Oliver Kutz},
+  title = {A Categorical Approach to Ontology Alignment},
+  year = {2014},
+  booktitle = {Proc. of the 9th International Workshop on Ontology Matching (OM-2014), ISWC-2014, Riva del Garda, Trentino, Italy.},
+  series = {CEUR-WS online proceedings},
+  keywords = {ontology alignment semantics colimit},
+  pdfurl = {http://www.informatik.uni-bremen.de/~okutz/resources/om2014.pdf},
+  abstract = {Ontology matching and alignment is a key mechanism for linking
+the diverse datasets and ontologies arising in the Semantic Web. We show
+that category theory provides the powerful abstractions needed for a uniform
+treatment at various levels: semantics, language design, reasoning and tools.
+The Distributed Ontology Language DOL is extended in a natural way with
+constructs for networks of ontologies. We in particular show how the three
+semantics of Zimmermann and Euzenat can be uniformly and faithfully represented using these DOL language constructs. Finally, we summarise how
+the DOL alignment features are currently being implemented in the Ontohub/Hets ecosystem, including support for the OWL and Alignment APIs.},
+  status = {Reviewed}
+}
+
+
+@inbook{JYB-Festschrift2015-DOL,
+	Author = {T. Mossakowski AND M. Codescu AND F. Neuhaus AND O. Kutz},
+	Chapter = {{The distributed ontology, modelling and specification language - DOL}},
+	Date-Added = {2015-01-15 22:16:06 +0000},
+	Date-Modified = {2015-01-15 22:19:05 +0000},
+	Editor = {Koslow, Arnold AND Buchsbaum, Arthur},
+	Publisher = {Birkh\"auser},
+	Series = {Studies in Universal Logic},
+	Title = {{The Road to Universal Logic--Festschrift for 50th birthday of Jean-Yves Beziau, Volume II}},
+	Year = {2015}}
+
+
+@inproceedings{womo13,
+	Author = {Till Mossakowski AND Oliver Kutz AND Mihai Codescu AND Christoph Lange},
+	Booktitle = {{Proceedings of the 7th International Workshop on Modular Ontologies (WoMO-13)}},
+	Date-Added = {2013-11-18 17:14:46 +0000},
+	Date-Modified = {2013-11-18 17:23:35 +0000},
+	Editor = {Chiara Del Vescovo et al.},
+	Publisher = {CEUR-WS},
+	Title = {{The Distributed Ontology, Modeling and Specification Language}},
+	Volume = {1081},
+	Year = {2013}}
+
+
+@inproceedings{DOL-TKE2012,
+	Address = {Madrid, Spain},
+	Author = {C. Lange AND T. Mossakowski AND O. Kutz AND C. Galinski AND M. Gr\"uninger AND D. Couto Vale},
+	Booktitle = {Proc.\ of the 10th Terminology and Knowledge Engineering Conference (TKE 2012)},
+	Date-Added = {2012-05-12 17:08:34 +0000},
+	Date-Modified = {2012-05-12 17:16:33 +0000},
+	Title = {{The Distributed Ontology Language (DOL): Use Cases, Syntax, and Extensibility}},
+	Year = {2012}}
+
+
+@inproceedings{DOL-3semantics,
+	Author = {Till Mossakowski AND Christoph Lange AND Oliver Kutz},
+	Booktitle = {7th International Conference on {F}ormal {O}ntology in {I}nformation {S}ystems (FOIS)},
+	Date-Added = {2012-02-07 22:11:18 +0000},
+	Date-Modified = {2013-05-09 20:05:36 +0000},
+	Editor = {Maureen Donnelly AND Giancarlo Guizzardi},
+	Note = {{FOIS Best Paper Award}},
+	Pages = {337--352},
+	Publisher = {{IOS} {P}ress},
+	Series = {{F}rontiers in {A}rtificial {I}ntelligence and {A}pplications},
+	Title = {{Three Semantics for the Core of the Distributed Ontology Language}},
+	Volume = {239},
+	Year = {2012}}
+
+
+@inproceedings{blendingc3gi12,
+	Address = {Montpellier, France},
+	Author = {O. Kutz AND T. Mossakowski AND J. Hois AND M. Bhatt AND J. Bateman},
+	Booktitle = {Computational Creativity, Concept Invention, and General Intelligence, Proc.\ of the 1st Int.\ Workshop C3GI@ECAI},
+	Date-Added = {2012-10-28 13:30:21 +0000},
+	Date-Modified = {2013-05-20 15:31:16 +0000},
+	Editor = {Tarek Besold AND Kai-Uwe Kuehnberger AND Marco Schorlemmer AND Alan Smaill},
+	Month = {August~27},
+	Publisher = {Publications of the Institute of Cognitive Science, Osnabr{\"u}ck},
+	Title = {{Ontological Blending in DOL}},
+	Volume = {01-2012},
+	Year = {2012}}
+	
+
+@article{hyper2010,
+		Author = {O. Kutz AND T. Mossakowski AND D. L\"ucke},
+		Date-Added = {2011-10-20 16:27:34 +0000},
+		Date-Modified = {2011-10-20 16:27:34 +0000},
+		Journal = {Logica Universalis},
+		Note = {Special Issue on `Is Logic Universal?'},
+		Number = {2},
+		Pages = {255--333},
+		Title = {{Carnap, Goguen, and the Hyperontologies: Logical Pluralism and Heterogeneous Structuring in Ontology Design}},
+		Volume = {4},
+		Year = {2010}}
+
+
+@article{Kutzetal04,
+	Author = {O. Kutz and C. Lutz and F. Wolter and M. Zakharyaschev},
+	Journal = {Artificial Intelligence},
+	Number = {1},
+	Pages = {1--73},
+	Title = {$\mathcal{E}$-connections of {A}bstract {D}escription {S}ystems},
+	Volume = {156},
+	Year = {2004}}
+
+
+@article{borgida6,
+	Author = {A. Borgida and L. Serafini},
+	Journal = {Journal of Data Semantics},
+	Optnote = {Editor in Chief S. Spaccapietra. LNCS 2800, Springer Verlag},
+	Pages = {153--184},
+	Title = {Distributed Description Logics: Assimilating Information from Peer Sources},
+	Volume = {1},
+	Year = {2003}}
