--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4329,7 +4329,7 @@ See the informative annexes~\ref{a:owl} to~\ref{a:casl} for details.
 \begin{figure}
   \centering
     \includegraphics[scale=0.47]{mof/native_document.png}
-   \caption{Informative diagram showing subclasses of \synatx{NativeDocument}}
+   \caption{Informative diagram showing subclasses of \syntax{NativeDocument}}
    \label{fig:native_document}
 \end{figure}
 
@@ -4337,7 +4337,7 @@ See the informative annexes~\ref{a:owl} to~\ref{a:casl} for details.
 \begin{figure}
   \centering
     \includegraphics[scale=0.47]{mof/basic_oms.png}
-   \caption{Informative diagram showing subclasses of \synatx{BasicOMS}}
+   \caption{Informative diagram showing subclasses of \syntax{BasicOMS}}
    \label{fig:basic_oms}
 \end{figure}
 
@@ -4348,7 +4348,7 @@ See the informative annexes~\ref{a:owl} to~\ref{a:casl} for details.
 \sclause{Documents}\label{c:libraries}
 \ssclause{Abstract Syntax}
 
-
+The DOL metamodel for documents and libraries is shown in Fig.~\ref{fig:libraries}.
 A \termref{document} (\syntax{Document}) can be a 
 \begin{itemize}
 \item a \DOL library, or
@@ -4378,7 +4378,7 @@ At the beginning of a \DOL library, one can declare a \syntax{PrefixMap} for abb
 \begin{figure}
   \centering
     \includegraphics[scale=0.47]{mof/libraries.png}
-  \caption{Add the capion}
+  \caption{DOL metamodel: Documents and libraries}
   \label{fig:libraries}
 \end{figure}
 
@@ -4438,6 +4438,7 @@ SeparatorChar  ::= ipchar | gen-delims - '#'+$<$\rm as defined in \nisref{IETF/R
 \sclause{OMS Networks}\label{c:networks}
 \ssclause{Abstract Syntax}
 
+The DOL metamodel for documents and libraries is shown in Fig.~\ref{fig:libraries}.
 Inside a \DOL library, with a \syntax{NetworkDefinition}, one can
 define OMS networks (also called distributed OMS). OMS networks are
 typically used for complex viewpoint specifications; they also can be
@@ -4465,7 +4466,7 @@ by specifying its source and target OMS. See Appendix~\ref{ex:alignment} for an 
 \begin{figure}
   \centering
     \includegraphics[scale=0.47]{mof/networks.png}
-  \caption{Add the caption}
+  \caption{}
   \label{fig:networks}
 \end{figure}
 
@@ -4495,6 +4496,7 @@ Id              ::= Letter LetterOrDigit*
 \sclause{OMS}\label{c:OMS}
 \ssclause{Abstract Syntax}
 
+The DOL metamodel for OMS is shown in Fig.~\ref{fig:oms}.
 \DOL provides a rich structuring language for OMS, providing
 extension, translation, unions of OMS and many more.  For each of
 these alternatives, a subclass is introduced. An OMS can be
@@ -4560,7 +4562,7 @@ models.
 \begin{figure}
   \centering
     \includegraphics[scale=0.47]{mof/oms.png}
-  \caption{Add the caption}
+  \caption{DOL metamodel: OMS}
   \label{fig:oms}
 \end{figure}
 
@@ -4568,6 +4570,7 @@ models.
 
 \voffset -1cm
 
+The DOL metamodel for extension OMS is shown in Fig.~\ref{fig:extension&closure}.
 \syntax{ExtendingOMS} is a subclass of \syntax{OMS}, containing
 those OMS that may be used to extend a given OMS within an \syntax{ExtensionOMS}.
 An \syntax{ExtendingOMS} can be one of the following:
@@ -4598,9 +4601,10 @@ can be built. The latter can optionally be named and/or marked as conservative, 
 \begin{figure}
   \centering
     \includegraphics[scale=0.47]{mof/extension&closure.png}
-  \caption{Add the caption}
+  \caption{DOL metamodel: Extension and closure OMS}
   \label{fig:extension&closure}
 \end{figure}
+
 
 Furthermore, OMS can be constructed using 
 \begin{itemize}
@@ -4633,13 +4637,17 @@ In all of these cases except for translation, a \syntax{RemovalKind}
 specifies whether the listed symbols are removed from the OMS, or
 whether they are kept (and the other ones are removed).
 
+The DOL metamodel for closure OMS is shown in
+Fig.~\ref{fig:extension&closure}, that for translation and reduction
+OMS in Fig.~\ref{fig:translations&reduction}. 
+
 
 
 \medskip
 \begin{figure}
   \centering
     \includegraphics[scale=0.47]{mof/translation&reduction.png}
-  \caption{Add the caption}
+  \caption{DOL metamodel: translation and reduction OMS}
   \label{fig:translations&reduction}
 \end{figure}
 
@@ -4797,7 +4805,10 @@ between a module of an OMS and the whole OMS
 (\syntax{ModuleRelDefinition}), or a named \termref{alignment}
 (\syntax{AlignmentDefinition}).
 
-Both interpretation and refinements specify a logical entailment or
+
+The DOL metamodel for  interpretations and refinements is shown in 
+Fig.~\ref{fig:interpretations&refinements}.
+Both interpretations and refinements specify a logical entailment or
 specialization relation between OMS.\\
  An
 \syntax{InterpretationDefinition} specifies source and target OMS
@@ -4839,11 +4850,12 @@ network).
 \begin{figure}
   \centering
     \includegraphics[scale=0.42]{mof/interpretations&refinements.png}
-  \caption{Add the caption}
+  \caption{DOL metamodel: Interpretations and refinements}
   \label{fig:interpretations&refinements}
 \end{figure}
 
-
+The DOL metamodel for entailments and equivalences is shown in 
+Fig.~\ref{fig:entailment&equivalence}.
 An entailment is a variant of an interpretation where all symbols are
 mapped identically, while an equivalence states that the model classes
 of two OMS are in bijective correspondence. As for refinements,
@@ -4857,7 +4869,7 @@ models of the OMS.
 \begin{figure}
   \centering
     \includegraphics[scale=0.39]{mof/entailment&equivalence.png}
-  \caption{Add the caption}
+  \caption{DOL metamodel: Entailments and equivalences}
   \label{fig:entailment&equivalence}
 \end{figure}
 
@@ -4865,7 +4877,8 @@ models of the OMS.
 
 
 
-
+The DOL metamodel for alignments is shown in 
+Fig.~\ref{fig:alignment}.
 Signature morphisms used in interpretations and refinements use
 a functional style of mapping symbols of OMS.
 In contrast to this style, an alignment provides a relational 
@@ -4889,10 +4902,13 @@ or whether several local domains are linked (``contextualized'') by relations.
 \begin{figure}
   \centering
     \includegraphics[scale=0.43]{mof/alignment.png}
-  \caption{Add the caption}
+  \caption{DOL metamodel: Alignments}
   \label{fig:alignment}
 \end{figure}
 
+
+The DOL metamodel for module relations is shown in 
+Fig.~\ref{fig:modules}.
 A \syntax{ModuleRelDefinition} declares that a certain (``module'') OMS
 actually is a module of some other (``whole'') OMS with respect
 to the \syntax{InterfaceSignature}.
@@ -4901,7 +4917,7 @@ to the \syntax{InterfaceSignature}.
 \begin{figure}
   \centering
     \includegraphics[scale=0.47]{mof/modules.png}
-  \caption{Add the caption}
+  \caption{DOL metamodel: Module relations}
   \label{fig:modules}
 \end{figure}
 
@@ -4999,8 +5015,8 @@ Double ::= ($<$ a number $\in [0,1]$ $>$)
 \sclause{Identifiers}\label{c:identifiers}
 This section specifies the abstract syntax of identifiers of \DOL OMS and their elements. Further, 
 it introduces the concrete syntax that is used in the \DOL serialization. 
-
 \ssclause{IRIs}\label{c:iris}
+
 
 In accordance with best practices for publishing OMS on the Web, identifiers of OMS and their 
 elements \should not just serve as \emph{names}, but also as \emph{locators}, which, when 
@@ -5022,6 +5038,8 @@ identified by a certain IRI \should be \emph{located} at the corresponding URL, 
 locate them.  As IRIs are specified with a concrete syntax only in \nisref{IETF/RFC 3987:2005}, \DOL 
 adopts the latter into its abstract syntax as well as all of its concrete syntaxes 
 (serializations).
+The DOL metamodel for IRIs and prefixes is shown in Fig.~\ref{fig:prefixes}.
+
 %\CLnote[type=q-all]{I meant to say: for IRIs, the abstract syntax is the same as 
 %the concrete syntax.}.
 
@@ -5051,7 +5069,7 @@ usually ending with \syntax{\#} or \syntax{/}. ({See annex~\ref{a:loc/id} for a 
 \begin{figure}
   \centering
     \includegraphics[scale=0.47]{mof/prefixes.png}
-  \caption{Add the caption}
+  \caption{DOL metamodel: Prefixes}
   \label{fig:prefixes}
 \end{figure}
 
@@ -8596,12 +8614,12 @@ Applications of the \DOL Ontology include modeling statements about OMS in RDF, 
 
 The classes in the \DOL Ontology (and their annotations) correspond to the terms (and their definitions) in \cref{terms-and-defs}. Classes that are reifications of relations also have been introduced as object properties.  All classes and object properties are assumed to be in the \DOL Ontology namespace unless stated otherwise. 
 The \DOL Ontology additionally contains some top-level abstract classes
-as follows:
+as shown in Fig.~\ref{fig:dol-onto-classes}.
 
 \begin{figure}
   \centering
     \includegraphics[width=0.8\textwidth]{illustrations/dol-onto-classes.png}
-  \caption{Add the caption}
+  \caption{DOL term ontology: top-level classes}
   \label{fig:dol-onto-classes}
 \end{figure}
 
@@ -8616,28 +8634,29 @@ Moreover, processes (like theorem proving) provide algorithmic
 procedcures for manipulating DOL librares, and tools implement
 these in software.
 
-Below the top-level classes, the class structure is as follows:
+Below the top-level classes, the class structure is as shown
+in Figs.~\ref{fig:linguistic-entity}--\ref{fig:tool}.
  
 %\includegraphics[width=0.8\textwidth]{illustrations/linguistic-entity2.png}
 
 \begin{figure}
   \centering
     \includegraphics[width=1\textwidth]{illustrations/linguistic-entity.png}
-  \caption{Add the caption}
+  \caption{DOL term ontology: linguistic entities}
   \label{fig:linguistic-entity}
 \end{figure}
 
 \begin{figure}
   \centering
     \includegraphics[width=1\textwidth]{illustrations/mathematical-entity.png}
-  \caption{Add the caption}
+  \caption{DOL term ontology: mathematical entities}
   \label{fig:mathematical-entity}
 \end{figure}
 
 \begin{figure}
   \centering
     \includegraphics[width=0.4\textwidth]{illustrations/semantic-entity.png}
-  \caption{Add the caption}
+  \caption{DOL term ontology: semantic entities}
   \label{fig:semantic-entity}
 \end{figure}
 
@@ -8645,7 +8664,7 @@ Below the top-level classes, the class structure is as follows:
 \begin{figure}
   \centering
     \includegraphics[width=0.4\textwidth]{illustrations/web-entity.png}
-  \caption{Add the caption}
+  \caption{DOL term ontology: web entities}
   \label{fig:web-entity}
 \end{figure}
 
@@ -8653,7 +8672,7 @@ Below the top-level classes, the class structure is as follows:
 \begin{figure}
   \centering
     \includegraphics[width=0.4\textwidth]{illustrations/process.png}
-  \caption{Add the caption}
+  \caption{DOL term ontology: processes}
   \label{fig:process}
 \end{figure}
 
@@ -8661,7 +8680,7 @@ Below the top-level classes, the class structure is as follows:
 \begin{figure}
   \centering
     \includegraphics[width=0.4\textwidth]{illustrations/tool.png}
-  \caption{Add the caption}
+  \caption{DOL term ontology: tools}
   \label{fig:tool}
 \end{figure}
 
@@ -8669,13 +8688,13 @@ Below the top-level classes, the class structure is as follows:
 
 
 The top level object properties are structured in a way similar 
-to that of the top-level classes:
+to that of the top-level classes, see Fig.~\ref{fig:dol-onto-properties}.
 \medskip
 
 \begin{figure}
   \centering
     \includegraphics[width=0.4\textwidth]{illustrations/dol-onto-properties.png}
-  \caption{Add the caption}
+  \caption{DOL term ontology: properties}
   \label{fig:dol-onto-properties}
 \end{figure}
 
@@ -11079,12 +11098,13 @@ the result of a query. Optionally, a result can be expressed to be
 complete, meaning that it comprises all answer substitutions to the query.
  Note that by default, OMS are employed with an open world semantics,
 but using minimizations, (part of) OMS can be equipped with a closed
-world semantics.
+world semantics. The corresponding extension of the DOL metamodel is shown
+in Fig.~\ref{fig:queries}.
 
 \begin{figure}
     \centering
       \includegraphics[scale=0.5]{mof/queries.png}
-     \caption{Add the caption}
+     \caption{Extension of DOL metamodel with queries}
     \label{fig:queries} 
 \end{figure}
 
