added logo image successfully

--- a/Standard/dol_isov2_conversion.tex
+++ b/Standard/dol_isov2_conversion.tex
@@ -34,14 +34,7 @@
 %%\pdfcommentfalse
 
 
-\documentclass[10pt,
-\ifpretendfinal
-final%
-\else
-draft%
-\fi,
-a4paper, 
-wd]{isov2} 
+\documentclass[10pt, a4paper, wd]{isov2} 
 
 %% Cleaning up things that isov2 gets wrong
 \makeatletter
@@ -129,7 +122,7 @@ wd]{isov2}
 
 %% Graphics
 \usepackage{standalone}
-\usepackage[final]{graphicx}
+\usepackage[pdftex]{graphicx}
 \usepackage{tikz}
 \usepackage{rotating}
 \usetikzlibrary{matrix,shapes,arrows,calc}
@@ -572,7 +565,7 @@ author=,date=,id=,replyto=,type=}{}%
 
 \begin{flushleft}
   \begin{figure}
-    \includegraphics{omglogo.png}
+    \includegraphics{omglogo.jpeg}
  \end{figure}
  
 \bigskip\bigskip
@@ -594,11 +587,8 @@ Version \version %DIFDELCMD <
 
 \vskip\medskipamount %%% or other desired dimension
 \leaders\vrule width \textwidth\vskip2pt %%% or other desired thickness
-
-\vskip 12pt 
-
+\vskip 6pt 
 \nointerlineskip
-
 
 OMG Document Number: ad/2015-08-01  \\ %ad/2015-05-03 ad/15-06-04
 %Normative reference: \\
@@ -606,8 +596,7 @@ Machine readable files (normative): ad/2015-08-03, ad-2015-07-02\\
 %Normative: \\
 %Informative: \\
 
-
-\vskip 12pt
+\vskip 28pt
 \leaders\vrule width \textwidth\vskip2pt % or other desired thickness
 \vskip\medskipamount % ditto
 \nointerlineskip
